--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 		overflow: hidden;
 	}
 	/* These styles make the root element full-height */
-	#root {
+	#boxTest {
 		display: flex;
 		height: 100%;
 	}
@@ -43,7 +43,7 @@
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
-	<div id="root"></div>
+	<div id="boxTest"></div>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
